add forgot password and refactor
